--- a/src/assets/scss/_globalVariable.scss
+++ b/src/assets/scss/_globalVariable.scss
@@ -1,5 +1,7 @@
-$backgroundColor: #EFEFEF;
-$fontColor: #4d4d4d;
+$backgroundColor: #dee2e6;
 
-$foreGround: rgb(255, 255, 255);
-$backGround: rgba(0, 0, 0, 0.116);
+$iconColor: #414141;
+$fontColor: #8C8F94;
+
+$pColorPink: #d356d3;
+$pColorCyan: #56d3d3;
