--- a/src/assets/scss/CoverUtils/CoverUtils.scss
+++ b/src/assets/scss/CoverUtils/CoverUtils.scss
@@ -1,51 +1,34 @@
 @import '../globalVariable';
 
 .cover-utils-container {
-  width: 100vw;
+  width: 100%;
   position: fixed;
-  bottom: 0%;
+  bottom: 5%;
+  z-index: 5;
 
   .wrapper {
+    display: flex;
+    justify-content: space-between;
     width: 85%;
     margin: 0 auto;
-    padding: 3rem 0 3rem 0;
-    display: flex;
+    align-items: center;
 
-    #social {
-      fill: $fontColor;
-    }
-
-    :focus{
-      outline: none;
-    }
-    
-    .input-container{
-      float: left;
-      width: 27.33%;
-      margin-left: 2rem;
-      position: relative;
+    .social-svg {
+      #social {
+        fill: $iconColor;
+  
+        #Path_520:hover {
+          cursor: pointer;
+        }
+      }
     }
 
-    input[type="text"]{
-      color: #000000;
-      width: 70%;
-      box-sizing: border-box;
-      letter-spacing: 1px;
-      background-color: transparent;
-      border: none;
-    }
-    .effect-1~.focus-border{
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 0;
-      height: 2px;
-      background-color: rgb(193, 128, 253);
-      transition: 0.4s;
-    }
-    .effect-1:focus~.focus-border {
-      width: 70%;
-      transition: 0.4s;
+    .next-svg {
+      #next {
+        fill: $iconColor;
+        position: relative;
+        top: -20%;
+      }
     }
   }
 }
