--- a/src/assets/scss/NavigationBar/navigationBar.scss
+++ b/src/assets/scss/NavigationBar/navigationBar.scss
@@ -1,38 +1,79 @@
 @import '../globalVariable';
 
-.nav-bar {
-  width: 100vw;
-  position: fixed;
+@mixin searchBar {
+  :focus{
+    outline: none;
+  }
   
+  .input-container{
+    float: left;
+    width: 20vw;
+    height: 2rem;
+    margin-left: 2vw;
+    position: relative;
+  }
+  
+  input[type="text"]{
+    font-size: 1rem;
+    color: #000000;
+    width: 100%;
+    height: 1rem;
+    box-sizing: border-box;
+    letter-spacing: 2px;
+    background-color: transparent;
+    border: none;
+  }
+
+  .effect-1~.focus-border{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background-color: rgb(193, 128, 253);
+    transition: 0.4s;
+  }
+
+  .effect-1:focus~.focus-border {
+    width: 70%;
+    transition: 0.4s;
+  }
+}
+
+// -------------------------
+.nav-bar {
+  display: flex;
+  width: 100%;
+  height: 10%;
+  position: fixed;
+  z-index: 5;
+
+  .logo {
+    width: 32vw;
+    text-align: center;
+    position: fixed;
+    left: 50%;
+    top: 3.2%;
+    transform: translateX(-50%);
+    color: $iconColor;
+  }
+
   .wrapper {
     width: 85%;
     margin: 0 auto;
-    padding: 3rem 0 3rem 0;
+    align-items: center;
     display: flex;
     justify-content: space-between;
 
-    .logo {
-      position: relative;
-      font-size: 1.5rem;
-      font-style: bold 800;
-      color: $backgroundColor;
-
-      h1:nth-child(1) {
-        text-shadow: -3px -3px 3px $foreGround;
-      }
-
-      h1:nth-child(2) {
-        position: absolute;
-        top: 0%;
-        text-shadow: 3px 3px 3px $backGround;
-      }
+    .search-bar {
+      display: flex;
+      @include searchBar();
     }
-
+    
     .menu-icon {
-      padding-top: 1rem;
-
-      .cls-1 {
-        fill: $fontColor;
+      justify-self: flex-end;
+      #menu_icon {
+        fill: $iconColor;
       }
 
       &:hover {
