--- a/src/assets/scss/_globalVariable.scss
+++ b/src/assets/scss/_globalVariable.scss
@@ -1,7 +1,8 @@
 $backgroundColor: #dee2e6;
 
 $iconColor: #414141;
-$fontColor: #8C8F94;
+$fontColor: #56585c;
+$subfontColor: #7f828a;
 
 $pColorPink: #d356d3;
 $pColorCyan: #56d3d3;
