--- a/src/assets/scss/Welcome/welcome.scss
+++ b/src/assets/scss/Welcome/welcome.scss
@@ -20,7 +20,7 @@
   }
   
   .googleBackground {
-    background-color: #dfda8d;
+    background-color: #79c27c;
   }
 }
 
@@ -38,11 +38,37 @@
       justify-content: center;
       align-items: center;
 
-      h3 {
-        font-size: 1.5vw;
+      
+      #slogan-text {
+        width: 80%;
+        font-size: 1rem;
+        font-weight: bolder;
+      }
+      
+      #slogan-alt {
+        font-size: 1.5rem;
         font-weight: lighter;
         font-family: 'Prata', serif;
         color: $iconColor;
+
+        margin-top: 3rem;
+      }
+
+      @media only screen and (max-width: 769px ) {
+        #slogan-text {
+          width: 100%;
+          font-size: 1rem;
+          font-weight: bolder;
+        }
+
+        #slogan-alt {
+          font-size: 1.5rem;
+          font-weight: lighter;
+          font-family: 'Prata', serif;
+          color: $iconColor;
+
+          margin-top: 1rem;
+        }
       }
     }
   }
@@ -54,6 +80,10 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
+
+      .keyword {
+        color: #01a5a5;
+      }
     }
   }
 }
@@ -64,11 +94,11 @@
       position: relative;
       display: flex;
       justify-content: center;
+      align-items: center;
 
       .three-dot {
         position: absolute;
         left: 50%;
-        top: 40%;
         transform: translateX(-50%);
         height: 10%;
         width: 20%;
@@ -92,16 +122,20 @@
 
       .third-title {
         text-align: center;
-        margin-top: 30vh;
+        transform: translateY(-5vh);
+
+        .keyword {
+          color: $iconColor;
+        }
 
         .title {
-          color: rgb(248, 248, 248);
+          color: $backgroundColor;
         }
 
         .sub-title {
-          font-size: 2vw;
-          color: #ececec;
+          // font-size: 1.6rem;
           font-weight: normal;
+          color: #ececec;
         }
       }
     }
@@ -112,8 +146,58 @@
   &:nth-of-type(4) {
     .section-container {
       display: flex;
-      flex-direction: column;
-      justify-content: center;
+      flex-wrap: wrap-reverse;
+      align-items: center;
+      justify-content: space-between;
+      
+      .presentation-jobs-wrapper {
+        width: 53%;
+        overflow-x: scroll;
+
+        &::-webkit-scrollbar {
+          background-color: transparent;
+        }
+        
+        &::-webkit-scrollbar-thumb {
+          background-color: $iconColor;
+        }
+        
+        .feature-jobs {
+          width: 200%;
+          display: flex;
+
+          .job-preview-card-container {
+            margin: 17px 10px;
+
+            &::before {
+              box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.342);
+            }
+          }
+        }
+      }
+
+      @media only screen and (max-width: 834px) {
+        .presentation-jobs-wrapper {
+          width: 100%;
+          
+          .feature-jobs {
+            width: 350%;
+          }
+        }
+      }
+
+      .label-desc {
+        text-align: right;
+        
+        @media only screen and (max-width: 834px) {
+          
+          text-align: left;
+        }
+
+        .keyword {
+          color: #f7f7f7;
+        }
+      }
     }
   }
 }
@@ -124,267 +208,316 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
+
+      .keyword {
+        color: $pColorPink;
+      }
     }
   }
 }
 
 @mixin sixthSection {
   &:nth-of-type(6) {
-    .start-button {
-      width: 20rem;
-      height: 20rem;
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; 
+    color: #494949;
 
-      &:hover {
-        cursor: pointer;
+    .start-button-wrapper {
+      width: 90%;
+      height: 20rem;
+
+      @media only screen and (max-width: 769px) {
+        height: 10rem;
       }
 
-      .label {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        z-index: 1;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 2rem;
-        color: $fontColor;
-        font-weight: lighter;
-        background: $backgroundColor;
-        border-radius: 20%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
-        .label-down {
+  
+      .selection {
+        width: 0%;
+        height: 100%;
+
+        overflow: hidden;
+        text-align: center;
+        
+        display: flex;                
+        align-items: center;
+        
+        transition: width ease-in-out 600ms;
+        
+        .contain-box {
+          width: 80%;
+          height: 80%;
+          border-radius: 10%;
+
+          display: flex;        
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+
+          transition: background-color cubic-bezier(0.000, -0.600, 0.000, 1.435) 1s;
+
+          .role-card-title {
+            font-size: 3rem;
+            font-weight: normal;
+          }
+    
+          .role-card-detail {
+            font-size: 1.5rem;
+            font-weight: lighter;
+            white-space: nowrap;
+          }
+  
+          @media only screen and (max-width: 769px) {
+            .role-card-title {
+              font-size: 1.3rem;
+              font-weight: normal;
+            }
+      
+            .role-card-detail {
+              font-size: 0.8rem;
+              font-weight: lighter;
+              white-space: nowrap;
+            }
+          }
+        }
+      }
+  
+      .employer {
+        justify-content: flex-end;
+        right: 63%;
+  
+        .contain-box:hover {
+          background-color: #eb96d6;
+          cursor: pointer;
+        }
+      }
+
+      .start-button {
+        width: 10rem;
+        height: 10rem;
+        justify-self: center;
+
+        @media only screen and (max-width: 769px) {
+          width: 7rem;
+          height: 7rem;
+        }
+
+        &:hover {
+          cursor: pointer;
+        }
+  
+        .label {
           width: 100%;
           height: 100%;
-          position: absolute;
+          background: $backgroundColor;
+          border-radius: 20%;
+          
           display: flex;
           align-items: center;
           justify-content: center;
           font-size: 2rem;
-          color: $fontColor;
+          
+          @media only screen and (max-width: 769px) {
+            font-size: 1rem;
+          }
+          
+          color: #8b8b8b;
           font-weight: lighter;
-          background: linear-gradient(-45deg, #e7ebf0 0%, #c5c9ce 100%);
-          border-radius: 20%;
-          opacity: 0;
-          transition: opacity 100ms ease;
-        }
+          
+          .label-down {
+            width: 10rem;
+            height: 10rem;
 
-        .back {
-          transition: opacity 100ms ease 0.1s;
-        }
+            @media only screen and (max-width: 769px) {
+              width: 7rem;
+              height: 7rem;
+            }
 
-        &:before, &:after {
-          width: 20rem;
-          height: 20rem;
-          content: '';
-          position: absolute;
-          border-radius: 20%;
-          box-shadow: -10px -10px 30px 0px #ffffffbb;
-        }
+            background-color: #eb52bd;
+            position: absolute;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 2rem;
+
+            @media only screen and (max-width: 769px) {
+              font-size: 1rem;
+            }
+
+            color: #8b8b8b;
+            font-weight: lighter;
+            background: linear-gradient(-45deg, #e7ebf0 0%, #c5c9ce 100%);
+            border-radius: 20%;
+            opacity: 0;
+            transition: opacity 100ms ease;
+          }
   
-        &:after {
-          box-shadow: 10px 10px 30px 0px #0000001c;
-        }
-      }
-    }
-
-    .rgb-animation {
-      .label {
-
-        .label-down {
-          opacity: 1;
-        }
-
-        .back {
-          opacity: 1;
+          .back {
+            transition: opacity 100ms ease 0.1s;
+          }
+  
           &:before, &:after {
-            display: block;
-            width: 95%;
-            height: 95%;
+            width: 10rem;
+            height: 10rem;
+
+            @media only screen and (max-width: 769px) {
+              width: 7rem;
+              height: 7rem;
+            }
+
             content: '';
             position: absolute;
             border-radius: 20%;
-            box-shadow: 0px 0px 10px 5px #ff00ea;
-            animation: 1.5s rgb-animate infinite;
+            box-shadow: -10px -10px 30px 0px #ffffffbb;
           }
     
           &:after {
-            box-shadow: 0px 0px 10px 5px #00e1ff;
-            animation: 1s rgb-animate infinite;
+            box-shadow: 10px 10px 30px 0px #0000001c;
           }
         }
       }
+  
+      .rgb-animation {
 
-      @keyframes rgb-animate {
-        0% {
-          top: 0;
-          left: 0;
+        .label {
+          width: 100%;
+          height: 100%;
+          
+          .label-down {
+            opacity: 1;
+          }
+  
+          .back {
+            opacity: 1;
+
+            &:before, &:after {
+              display: block;
+              width: 95%;
+              height: 95%;
+              content: '';
+              position: absolute;
+              border-radius: 20%;
+              box-shadow: 0px 0px 5px 2px #ff00ea;
+              animation: 1.5s rgb-animate infinite;
+            }
+      
+            &:after {
+              box-shadow: 0px 0px 5px 2px #00e1ff;
+              animation: 1s rgb-animate infinite;
+            }
+          }
         }
   
-        6% {
-          top: 0;
-          left: 1.2%;
+        @keyframes rgb-animate {
+          0% {
+            top: 0;
+            left: 0;
+          }
+    
+          6% {
+            top: 0;
+            left: 1.2%;
+          }
+    
+          12% {
+            top: 0;
+            left: 2.5%;
+          }
+    
+          18% {
+            top: 0;
+            left: 3.75%;
+          }
+    
+          25% {
+            top: 0;
+            left: 5%;    
+          }
+    
+          31% {
+            top: 1.52%;
+            left: 5%;
+          }
+          
+          37% {
+            top: 2.5%;
+            left: 5%;
+          }
+    
+          43% {
+            top: 3.75%;
+            left: 5%;
+          }
+    
+          50% {
+            top: 5%;
+            left: 5%;    
+          }
+    
+          56% {
+            top: 5%;
+            left: 3.75%;
+          }
+    
+          62% {
+            top: 5%;
+            left: 2.5%;
+          }
+    
+          68% {
+            top: 5%;
+            left: 1.52%;
+          }
+    
+          75% {
+            top: 5%;
+            left: 0%;
+          }
+    
+          81% {
+            top: 3.75%;
+            left: 0;
+          }
+    
+          87% {
+            top: 2.5%;
+            left: 0;
+          }
+    
+          93% {
+            top: 1.52%;
+            left: 0;
+          }
+    
+          100% {
+            top: 0;
+            left: 0;    
+          }
         }
+      } 
   
-        12% {
-          top: 0;
-          left: 2.5%;
-        }
+      .employee {
+        left: 63%;
+        justify-content: flex-start;
   
-        18% {
-          top: 0;
-          left: 3.75%;
+        .contain-box:hover {
+          background-color: #96ebeb;
+          cursor: pointer;
         }
+      }
   
-        25% {
-          top: 0;
-          left: 5%;    
-        }
-  
-        31% {
-          top: 1.52%;
-          left: 5%;
-        }
+      .display {
+        width: 35%;
         
-        37% {
-          top: 2.5%;
-          left: 5%;
-        }
-  
-        43% {
-          top: 3.75%;
-          left: 5%;
-        }
-  
-        50% {
-          top: 5%;
-          left: 5%;    
-        }
-  
-        56% {
-          top: 5%;
-          left: 3.75%;
-        }
-  
-        62% {
-          top: 5%;
-          left: 2.5%;
-        }
-  
-        68% {
-          top: 5%;
-          left: 1.52%;
-        }
-  
-        75% {
-          top: 5%;
-          left: 0%;
-        }
-  
-        81% {
-          top: 3.75%;
-          left: 0;
-        }
-  
-        87% {
-          top: 2.5%;
-          left: 0;
-        }
-  
-        93% {
-          top: 1.52%;
-          left: 0;
-        }
-  
-        100% {
-          top: 0;
-          left: 0;    
+        @media only screen and (max-width: 769px) {
+          width: 45%;
         }
       }
-    } 
-
-    .selection {
-      width: 0%;
-      height: 35%;
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      border-radius: 10px;
-      overflow: hidden;
-      transition: width ease 1s;
-      text-align: center;
-      transition: all ease 1s;
-
-      .shadow {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        border-radius: 10px;
-        display: flex;        
-        flex-direction: column;
-        justify-content: center;
-
-        .role-card-title {
-          font-size: 3rem;
-          font-weight: normal;
-        }
-  
-        .role-card-detail {
-          font-size: 1.5rem;
-          font-weight: lighter;
-          color: $iconColor;
-          white-space: nowrap;
-        }
-
-        &:before {
-          width: 110%;
-          height: 110%;
-          position: absolute;
-          top: 0%;
-          left: 0%;
-          z-index: -1;
-          content: '';
-          border-radius: 10px;
-          box-shadow: inset 0 0 26px 0px #00000054;
-        }
-
-        &:after {
-          width: 105%;
-          height: 105%;
-          position: absolute;
-          right: 0%;
-          bottom: 0%;
-          z-index: -1;
-          content: '';
-          border-radius: 10px;
-          box-shadow: inset 0 0 26px 0px #ffffff;
-        }
-      }
-    }
-
-    .employee {
-      right: 63%;
-
-      &:hover {
-        background-color: #eb96d6;
-        cursor: pointer;
-      }
-    }
-
-    .employer {
-      left: 63%;
-
-      &:hover {
-        background-color: #96ebeb;
-        cursor: pointer;
-      }
-    }
-
-    .display {
-      width: 25%;
     }
   }
 }
@@ -392,50 +525,77 @@
 //---------------------------------------------
 
 .welcome-container {
-  width: 100%;
   height: 100vh;
-  scroll-snap-type: y proximity;
-  overflow-y: scroll;
+  
+  position: relative;
+  z-index: 0;
 
   .cover-color {
     height: 100%;
     width: 0%;
     position: fixed;
-    right: 0%;
     z-index: -1;
+    right: 0%;
     transition: background-color 1s ease;
   }
 
   .feature-photo {
-    height: 100%;
+    height: 90%;
     position: fixed;
     bottom: 0%;
+    right: 10vw;
     z-index: -1;
+
+    .photo1 {
+      bottom: 10%;
+    }
   }
 
   section {
-    width: 100%;
     height: 100vh;
     scroll-snap-align: start;
     position: relative;
     z-index: 0;
 
     .section-container {
-      width: 85%;
-      margin: 0 auto;   
       height: 100%;
+      max-width: 1350px;
+      width: 100%;
+      margin: 0 auto;   
+      padding: 0 1rem;
+      
       position: relative;
 
       .title {
-        font-size: 9vw;
+        font-size: 6rem;
         font-family: 'Prata', serif;
         color: $fontColor;
       }
 
       .sub-title {
-        font-size: 2vw;
+        font-size: 1.5rem;
         color: $subfontColor;
         font-weight: normal;
+      }
+
+      .keyword {
+        font-size: 1.2rem;
+        color: $pColorCyan;
+        font-weight: 900;
+      }
+
+      @media only screen and (max-width: 769px) {
+        .title {
+          font-size: 3rem;
+          font-family: 'Prata', serif;
+          color: $fontColor;
+        }
+
+        .sub-title {
+          font-size: 1rem;
+          color: $subfontColor;
+          font-weight: normal;
+        }
       }
     }
     
@@ -447,74 +607,108 @@
     @include sixthSection();
   }
 
-  .footer {
+  .rgb-bar {
     width: 100%;
-    height: 50%;
-    background-color: $iconColor;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+    height: 6px;
+    animation: 10s rgb infinite;
+
+    @keyframes rgb {
+      0% {
+        background-color: #ff5b5b;
+      }
+
+      25% {
+        background-color: #80ff59;
+      }
+      50% {
+        background-color: #6156ff;
+      }
+      75% {
+        background-color: #ff5fcf;
+      }
+
+      100% {
+        background-color: #ff5b5b;
+      }
+    }
+  }
+  
+  footer {
     position: relative;
+    z-index: 0;
+    text-align: center;
+    padding: 90px 0;
+    overflow: hidden;
+    background-color: $iconColor;
 
-    .rgb-bar {
-      width: 100%;
-      height: 3%;
-      background-color: slateblue;
+    .back-mask {
+      color: #0000001c;
       position: absolute;
-      top: 0;
-      animation: 10s rgb infinite;
+      z-index: -1;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
 
-      @keyframes rgb {
-        0% {
-          background-color: #eb5252;
-        }
+      @media only screen and (min-width: 769px) {
+        font-size: 20rem;
+        letter-spacing: 5rem;
+        font-weight: bolder;
+      }
+      
+      @media only screen and (max-width: 769px) {
+        font-size: 14rem;
+        letter-spacing: 3rem;
+      }
 
-        25% {
-          background-color: #76eb52;
-        }
-        50% {
-          background-color: #5c52eb;
-        }
-        75% {
-          background-color: #eb52bd;
-        }
-
-        100% {
-          background-color: #eb5252;
-        }
+      &:hover {
+        cursor: default;
       }
     }
 
-    .footer-title {
-      font-size: 3rem;
-    }
-
     .social-wrapper {
-      width: 15%;
+      width: 100%;
+      max-width: 150px;
+      margin: 0 auto;
+      padding: 16px 0;
+      
       display: flex;
       justify-content: space-between;
+      position: relative;
+
+      #facebook-icon {
+        width: 13px;
+        fill: #b1b1b1;
+        transition: all ease-in-out 1s;
+      }
+
+      #instagram-icon {
+        width: 23px;
+        fill: #b1b1b1;
+        transition: all ease-in-out 1s;
+      }
+
+      #twitter-icon {
+        width: 25px;
+        fill: #b1b1b1;
+        transition: all ease-in-out 1s;
+      }
+
+      svg:hover {
+        cursor: pointer;
+        fill: #f1f1f1;
+      }
+    }
+
+    .copyright {
+      width: 100%;
       margin: 0 auto;
+      padding: 2rem 0;
 
-      .social {
-        width: 3.5rem;
-        height: 3.5rem;
-        border-radius: 900%;
-        position: relative;
+      font-size: 12px;
+      color: #b1b1b1;
 
-        &:before, &:after {
-          display: block;
-          width: 3.5rem;
-          height: 3.5rem;
-          content: '';
-          border-radius: 900%;
-          position: absolute;
-          box-shadow: 4px 4px 6px 0 #00000033;
-        }
-
-        &:after {
-          box-shadow: -4px -4px 6px 0 #ffffff0e;
-        }
+      @media only screen and (max-width: 769px) {
+        font-size: 12px;
       }
     }
   }
