--- a/src/assets/scss/_globalVariable.scss
+++ b/src/assets/scss/_globalVariable.scss
@@ -1,8 +1,10 @@
 $backgroundColor: #dee2e6;
 
-$iconColor: #414141;
+$iconColor: #505050;
 $fontColor: #3c3e41;
 $subfontColor: #777777;
 
-$pColorPink: #d356d3;
-$pColorCyan: #56d3d3;
+$pColorPink: #c37bd1;
+$pColorCyan: #43a2a7;
+
+$serifFont: 'Prata', serif;
