--- a/src/assets/scss/Welcome/welcome.scss
+++ b/src/assets/scss/Welcome/welcome.scss
@@ -48,7 +48,7 @@
       #slogan-alt {
         font-size: 1.5rem;
         font-weight: lighter;
-        font-family: 'Prata', serif;
+        font-family: $serifFont;
         color: $iconColor;
 
         margin-top: 3rem;
@@ -64,7 +64,7 @@
         #slogan-alt {
           font-size: 1.5rem;
           font-weight: lighter;
-          font-family: 'Prata', serif;
+          font-family: $serifFont;
           color: $iconColor;
 
           margin-top: 1rem;
@@ -119,7 +119,7 @@
                 font-size: 32px;
               }
               color: $fontColor;
-              font-family: 'Prata', serif;
+              font-family: $serifFont;
               font-weight: bolder;
 
               border: none;
@@ -235,17 +235,16 @@
 
           .job-preview-card-container {
             margin: 17px 7px;
-    
-            &::before {
-              box-shadow: 0 0 7px 0 #00000057;
+            box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.342);
+            
+            @media only screen and (max-width: 769px) {
+              width: 300px;
             }
           }
     
           .label-desc {
-            height: 100%;
             display: flex;
             flex-direction: column;
-            justify-content: space-evenly;
 
             text-align: right;
             margin-left: 20px;
@@ -261,6 +260,7 @@
             }
 
             .info {
+              margin-top: 2rem;
               font-weight: bolder;
               color: #f7f7f7;
 
@@ -310,41 +310,32 @@
     color: #494949;
 
     .start-button-wrapper {
-      width: 90%;
-      height: 20rem;
-
+      width: 70%;
+      height: 15rem;
       @media only screen and (max-width: 769px) {
+        width: 95%;
         height: 10rem;
       }
-
       display: flex;
       justify-content: center;
       align-items: center;
-
   
       .selection {
         width: 0%;
         height: 100%;
-
-        overflow: hidden;
+        border-radius: 20px;
         text-align: center;
-        
-        display: flex;                
-        align-items: center;
-        
-        transition: width ease-in-out 600ms;
+        display: flex;         
+        position: relative;       
+        transition: all ease-in-out 600ms;
+        background-color: $backgroundColor;
         
         .contain-box {
-          width: 80%;
-          height: 80%;
-          border-radius: 10%;
-
+          width: 100%;
           display: flex;        
           flex-direction: column;
           justify-content: center;
-          align-items: center;
-
-          transition: background-color cubic-bezier(0.000, -0.600, 0.000, 1.435) 1s;
+          overflow: hidden;
 
           .role-card-title {
             font-size: 3rem;
@@ -360,26 +351,107 @@
           @media only screen and (max-width: 769px) {
             .role-card-title {
               font-size: 1.3rem;
-              font-weight: normal;
             }
       
             .role-card-detail {
               font-size: 0.8rem;
-              font-weight: lighter;
-              white-space: nowrap;
             }
+          }
+        }
+      }
+
+      .display {
+        width: 35%;
+
+        @media only screen and (max-width: 769px) {
+          width: 30%;
+        }
+
+        &:hover {
+          cursor: pointer;
+          box-shadow: 0 3px 10px rgba(0, 0, 0, 0.178);
+        }
+
+        &:hover:before, &:hover:after {
+          content: '';
+          display: block;
+          width: 100%;
+          height: 100%;
+          border-radius: 20px;
+          position: absolute;
+          z-index: -1;
+          background-color: #fd7de8;
+          animation: 2s selection-cw-animate infinite;
+        }
+
+        &:hover:after {
+          background-color: #7deefd;
+          animation: 1.5s selection-ccw-animate infinite;
+        }
+
+        @keyframes selection-cw-animate {
+          0% {
+            top: -2%;
+            left: 0;
+          }
+
+          25% {
+            top: 0;
+            left: 2%;
+          }
+    
+          50% {
+            top: 2%;
+            left: 0;
+          }
+    
+          75% {
+            top: 0;
+            left: -2%;
+          }
+    
+          100% {
+            top: -2%;
+            left: 0;   
+          }
+        }
+
+        @keyframes selection-ccw-animate {
+          0% {
+            top: -2%;
+            left: 0;
+          }
+
+          25% {
+            top: 0;
+            left: -2%;
+          }
+    
+          50% {
+            top: 2%;
+            left: 0;
+          }
+    
+          75% {
+            top: 0;
+            left: 2%;
+          }
+    
+          100% {
+            top: -2%;
+            left: 0;   
           }
         }
       }
   
       .employer {
-        justify-content: flex-end;
         right: 63%;
+        justify-content: flex-end;
+      }
   
-        .contain-box:hover {
-          background-color: #eb96d6;
-          cursor: pointer;
-        }
+      .employee {
+        left: 63%;
+        justify-content: flex-start;
       }
 
       .start-button {
@@ -401,206 +473,47 @@
           height: 100%;
           background: $backgroundColor;
           border-radius: 20%;
-          
           display: flex;
           align-items: center;
           justify-content: center;
           font-size: 2rem;
-          
           @media only screen and (max-width: 769px) {
             font-size: 1rem;
           }
-          
           color: #8b8b8b;
           font-weight: lighter;
+          box-shadow: -5px -5px 10px #ffffff9c, 5px 5px 10px #00000021;
           
           .label-down {
             width: 10rem;
             height: 10rem;
-
             @media only screen and (max-width: 769px) {
               width: 7rem;
               height: 7rem;
             }
-
-            background-color: #eb52bd;
+            border-radius: 20%;
+            opacity: 0;
+            transition: opacity 100ms ease;
             position: absolute;
             display: flex;
             align-items: center;
             justify-content: center;
             font-size: 2rem;
-
             @media only screen and (max-width: 769px) {
               font-size: 1rem;
             }
-
             color: #8b8b8b;
             font-weight: lighter;
             background: linear-gradient(-45deg, #e7ebf0 0%, #c5c9ce 100%);
-            border-radius: 20%;
-            opacity: 0;
-            transition: opacity 100ms ease;
-          }
-  
-          .back {
-            transition: opacity 100ms ease 0.1s;
-          }
-  
-          &:before, &:after {
-            width: 10rem;
-            height: 10rem;
-
-            @media only screen and (max-width: 769px) {
-              width: 7rem;
-              height: 7rem;
-            }
-
-            content: '';
-            position: absolute;
-            border-radius: 20%;
-            box-shadow: -10px -10px 30px 0px #ffffffbb;
-          }
-    
-          &:after {
-            box-shadow: 10px 10px 30px 0px #0000001c;
           }
         }
       }
   
       .rgb-animation {
-
         .label {
-          width: 100%;
-          height: 100%;
-          
           .label-down {
             opacity: 1;
           }
-  
-          .back {
-            opacity: 1;
-
-            &:before, &:after {
-              display: block;
-              width: 95%;
-              height: 95%;
-              content: '';
-              position: absolute;
-              border-radius: 20%;
-              box-shadow: 0px 0px 5px 2px #ff00ea;
-              animation: 1.5s rgb-animate infinite;
-            }
-      
-            &:after {
-              box-shadow: 0px 0px 5px 2px #00e1ff;
-              animation: 1s rgb-animate infinite;
-            }
-          }
-        }
-  
-        @keyframes rgb-animate {
-          0% {
-            top: 0;
-            left: 0;
-          }
-    
-          6% {
-            top: 0;
-            left: 1.2%;
-          }
-    
-          12% {
-            top: 0;
-            left: 2.5%;
-          }
-    
-          18% {
-            top: 0;
-            left: 3.75%;
-          }
-    
-          25% {
-            top: 0;
-            left: 5%;    
-          }
-    
-          31% {
-            top: 1.52%;
-            left: 5%;
-          }
-          
-          37% {
-            top: 2.5%;
-            left: 5%;
-          }
-    
-          43% {
-            top: 3.75%;
-            left: 5%;
-          }
-    
-          50% {
-            top: 5%;
-            left: 5%;    
-          }
-    
-          56% {
-            top: 5%;
-            left: 3.75%;
-          }
-    
-          62% {
-            top: 5%;
-            left: 2.5%;
-          }
-    
-          68% {
-            top: 5%;
-            left: 1.52%;
-          }
-    
-          75% {
-            top: 5%;
-            left: 0%;
-          }
-    
-          81% {
-            top: 3.75%;
-            left: 0;
-          }
-    
-          87% {
-            top: 2.5%;
-            left: 0;
-          }
-    
-          93% {
-            top: 1.52%;
-            left: 0;
-          }
-    
-          100% {
-            top: 0;
-            left: 0;    
-          }
-        }
-      } 
-  
-      .employee {
-        left: 63%;
-        justify-content: flex-start;
-  
-        .contain-box:hover {
-          background-color: #96ebeb;
-          cursor: pointer;
-        }
-      }
-  
-      .display {
-        width: 35%;
-        
-        @media only screen and (max-width: 769px) {
-          width: 45%;
         }
       }
     }
@@ -647,13 +560,13 @@
 
       .title {
         font-size: 6rem;
-        font-family: 'Prata', serif;
+        font-family: $serifFont;
         color: $fontColor;
       }
 
       .sub-title {
         font-size: 1.5rem;
-        color: $subfontColor;
+        color: $fontColor;
         font-weight: normal;
       }
 
@@ -666,14 +579,10 @@
       @media only screen and (max-width: 769px) {
         .title {
           font-size: 3rem;
-          font-family: 'Prata', serif;
-          color: $fontColor;
         }
 
         .sub-title {
           font-size: 1rem;
-          color: $subfontColor;
-          font-weight: normal;
         }
       }
     }
