--- a/src/assets/scss/_globalVariable.scss
+++ b/src/assets/scss/_globalVariable.scss
@@ -2,9 +2,11 @@ $backgroundColor: #dee2e6;
 
 $iconColor: #505050;
 $fontColor: #3c3e41;
+$titleFontColor: #2b2b2b;
+$darkBlueGray: #393E46;
 $subfontColor: #777777;
 
-$pColorPink: #c37bd1;
-$pColorCyan: #43a2a7;
+$pColorPink: #c544bf;
+$pColorCyan: #44c1c5;
 
 $serifFont: 'Prata', serif;
