--- a/src/assets/scss/JobSearchResults/JobSearchResult.scss
+++ b/src/assets/scss/JobSearchResults/JobSearchResult.scss
@@ -1,203 +1,483 @@
-@import '../globalVariable';
+@import "../globalVariable";
 
 .JobSearchResult-container {
-  padding-top: 5rem;
+	padding-top: 5rem;
 
-  .JobSearchResult-wrapper {
-    width: 100%;
-    max-width: 1250px;
-    margin: 0 auto;
-    padding: 1rem;
-    display: flex;
-    flex-wrap: wrap;
-    
-    .left-col {
-      width: 240px;
-      margin-bottom: 2rem;
-      
-      @media only screen and (max-width: 769px) {
-        width: 100%;
-      }
+	.JobSearchResult-wrapper {
+		width: 100%;
+		max-width: 1350px;
+		margin: 0 auto;
+		padding: 1rem;
+		display: flex;
+		flex-wrap: wrap;
 
-      display: flex;
-      flex-direction: column;
-      
-      .user-info-wrapper {
-        height: 150px;
-  
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-  
-        .user-avatar {
-          width: 3.5rem;
-          height: 3.5rem;
-          overflow: hidden;
-          border-radius: 30px;
-          margin-bottom: auto;
-        }
-  
-        .user-name {
-          width: fit-content;
-          color: $fontColor;
-          font-size: 18px;
-          font-weight: bolder;
-        }
-        
-        .user-email {
-          color: $subfontColor;
-          font-weight: normal;
-          font-size: 14px;
-        }
+		.left-col {
+			width: 240px;
+			margin-bottom: 7rem;
 
-        .log-out-wrapper {
-          margin-top: auto;
-          display: flex;
-          align-items: center;
+			@media only screen and (max-width: 769px) {
+				width: 100%;
+			}
 
-          #log-out-icon {
-            width: 18px;
-            margin-right: 10px;
-            fill: #406aa8;
-          }
+			display: flex;
+			flex-direction: column;
 
-          a {
-            color: #406aa8;
-          }
-        }
-      }
+			.user-info-wrapper {
+				height: 150px;
 
-      .search-wrapper {
-        height: 260px;
-        margin-top: 48px;
-        display: flex;
-        flex-direction: column;
-        position: sticky;
-        top: 6rem;
+				display: flex;
+				flex-direction: column;
+				justify-content: space-between;
 
-        .search-label {
-          color: $fontColor;
-          margin-bottom: auto;
-        }
+				.user-avatar {
+					width: 3.5rem;
+					height: 3.5rem;
+					overflow: hidden;
+					border-radius: 30px;
+					margin-bottom: 1rem;
+				}
 
-        .input-box {
-          padding: 13px 13px 13px 13px;
-          margin-top: 13px;
-          position: relative;
-          box-shadow: inset 3px 3px 3px #0000001e, inset -3px -3px 3px #ffffffd0;
-          
-          .search-box {
-            width: 100%;
-            height: 100%;
-            border: none;
-            background-color: transparent;
-            
-            &:focus {
-              outline: none;
-            }
-          }
-          
-          #city-select-box {
-            color: $fontColor;
-            width: 100%;
-            border: none;
-            background-color: transparent;
-            display: flex;
+				.user-name {
+					width: fit-content;
+					color: $fontColor;
+					font-size: 18px;
+					font-weight: bolder;
+				}
 
-            &:focus {
-              outline: none;
-            }
-          }
-        }
+				.user-email {
+					color: $subfontColor;
+					font-weight: normal;
+					font-size: 14px;
+				}
 
-        .button-box {
-          display: flex;
-          justify-content: center;
-          border: none;
-          border-radius: 7px;
-          background:  $pColorCyan;
-          color: #f7f7f7;
-          font-weight: bold;
-          box-shadow: 3px 3px 7px #0000001e, -3px -3px 7px #ffffffd0;
+				.log-out-wrapper {
+					margin-top: auto;
+					display: flex;
+					align-items: center;
 
-          &:focus {
-            outline: none;
-          }
+					#log-out-icon {
+						width: 18px;
+						margin-right: 10px;
+						fill: #406aa8;
+					}
 
-          &:hover {
-            cursor: pointer;
-            box-shadow: inset -3px -3px 4px #ffffff5d, inset 3px 3px 3px #0000001e;
-          }
+					a {
+						color: #406aa8;
+					}
+				}
+			}
 
-          .search-icon {
-            width: 1rem;
-            fill: #f7f7f7;
-          }
+			.search-wrapper {
+				height: 260px;
+				margin-top: 48px;
+				display: flex;
+				flex-direction: column;
+				position: sticky;
+				top: 6rem;
 
-          .button-label {
-            margin-right: 8px;
-          }
-        }
-      }
-    }
+				.search-label {
+					color: $fontColor;
+					margin-bottom: 2rem;
+				}
 
-    .middle-col {
-      padding: 0 32px;
+				.input-box {
+					border-radius: 10px;
+					padding: 13px 13px 13px 13px;
+					margin-top: 13px;
+					position: relative;
+					box-shadow: inset 3px 3px 3px #0000001e, inset -3px -3px 3px #ffffffd0;
 
-      @media only screen and (max-width: 769px) {
-        padding: 0;
-      }
+					.search-box {
+						width: 100%;
+						height: 100%;
+						border: none;
+						background-color: transparent;
 
-      .search-result-number {
-        .found-label {
-          font-size: 1.5rem;
-          color: $fontColor;
-        }
-        
-        .number-of-results {
-          margin-top: 1rem;
-          font-size: 4rem;
-          color: $pColorCyan;
-        }
-        
-        .desired-job-name {
-          font-size: 3rem;
-          color: $fontColor;
-        }
-      }
+						&:focus {
+							outline: none;
+						}
+					}
 
-      .job-list-result {
-        display: flex;
-        flex-wrap: wrap;
-        margin-top: 2rem;
-        
-        .job-column {
-          @media only screen and (max-width: 769px) {
-            width: 100%;
-          }
+					#city-select-box {
+						color: $fontColor;
+						width: 100%;
+						border: none;
+						background-color: transparent;
+						display: flex;
 
-          .job-preview-card-container {
-            margin-bottom: 12px;
-            box-shadow: 4px 4px 6px 0px #00000025, -4px -4px 6px 0px #ffffff81;
+						&:focus {
+							outline: none;
+						}
+					}
+				}
 
-            &:hover {
-              cursor: pointer;
-            }
-            
-            @media only screen and (max-width: 769px) {
-              width: 100%;
-            }
-          }
+				.button-box {
+					margin-top: 2rem;
+					display: flex;
+					justify-content: center;
+					border: none;
+					border-radius: 7px;
+					background: $pColorCyan;
+					color: #f7f7f7;
+					font-weight: bold;
+					box-shadow: 3px 3px 7px #0000001e, -3px -3px 7px #ffffffd0;
 
-          &:nth-of-type(1) {
-            margin-right: 12px;
-            
-            @media only screen and (max-width: 769px) {
-              margin-right: 0;
-            }
-          }
-        }
-      }
-    }
-  }
+					&:focus {
+						outline: none;
+					}
+
+					&:hover {
+						cursor: pointer;
+						box-shadow: inset -3px -3px 4px #ffffff5d,
+							inset 3px 3px 3px #0000001e;
+					}
+
+					.search-icon {
+						width: 1rem;
+						fill: #f7f7f7;
+					}
+
+					.button-label {
+						margin-right: 8px;
+					}
+				}
+			}
+		}
+
+		.middle-col {
+			padding: 0 32px;
+
+			@media only screen and (max-width: 769px) {
+				padding: 0;
+			}
+
+			.search-result-number {
+				.found-label {
+					font-size: 1.5rem;
+					color: $fontColor;
+				}
+
+				.number-of-results {
+					margin-top: 1rem;
+					font-size: 4rem;
+					color: $pColorCyan;
+				}
+
+				.desired-job-name {
+					font-size: 3rem;
+					color: $fontColor;
+				}
+			}
+
+			.job-list-result {
+				display: flex;
+				flex-wrap: wrap;
+				margin-top: 2rem;
+
+				.job-column {
+					@media only screen and (max-width: 769px) {
+						width: 100%;
+					}
+
+					.job-preview-card-container {
+						margin-bottom: 20px;
+						box-shadow: 4px 4px 6px 0px #00000025, -4px -4px 6px 0px #ffffff81;
+
+						&:hover {
+							cursor: pointer;
+						}
+
+						@media only screen and (max-width: 769px) {
+							width: 100%;
+						}
+					}
+
+					&:nth-of-type(1) {
+						margin-right: 20px;
+
+						@media only screen and (max-width: 769px) {
+							margin-right: 0;
+						}
+					}
+				}
+			}
+		}
+
+		.right-col {
+			display: flex;
+			flex-direction: column;
+			height: 100vh;
+			width: 433px;
+			overflow: hidden;
+			opacity: 0;
+			transition: all ease-in-out 0.5s;
+
+			@media only screen and (max-width: 769px) {
+				width: 100%;
+			}
+
+			background-color: $backgroundColor;
+			position: fixed;
+			right: -433px;
+			top: 0;
+			z-index: 1;
+			box-shadow: -8px 0px 6px 0px #ffffff63;
+			padding: 5rem 1.5rem 0 1.5rem;
+
+			.company-image-detail-wrapper {
+				width: 100%;
+				text-align: center;
+
+				.company-logo-detail {
+					width: 4rem;
+					height: 4rem;
+					border-radius: 300px;
+				}
+			}
+
+			.company-title-detail,.company-type-detail {
+				width: 100%;
+				text-align: center;
+				display: block;
+				color: $fontColor;
+			}
+
+			.company-title-detail {
+				margin-top: 1.5rem;
+			}
+
+			.company-type-detail {
+				font-weight: bold;
+				font-size: 14px;
+				color: $subfontColor;
+			}
+
+			.post-title-wrapper-detail {
+				margin-top: 2rem;
+				color: $fontColor;
+				display: flex;
+				justify-content: space-between;
+				align-items: flex-end;
+
+				.post-until-detail {
+					font-weight: bold;
+					color: $subfontColor;
+					font-size: 14px;
+				}
+			}
+			
+			.address-wrapper-detail {
+				margin-top: 0.5rem;
+				display: flex;
+				align-items: flex-end;
+
+				.location-pin {
+					width: 0.8rem;
+					margin-right: 10px;
+					fill: $iconColor;
+				}
+
+				.address-detail {
+					font-weight: bold;
+					color: $subfontColor;
+					font-size: 14px;
+				}
+			}
+
+			.skills-wrapper-detail {
+				margin-top: 1.5rem;
+				display: flex;
+
+				.skill-detail {
+					color: $iconColor;
+					font-size: 14px;
+					border-radius: 20px;
+					padding: 10px 16px 10px 16px;
+					margin-right: 16px;
+					background-color: $backgroundColor;
+					box-shadow: 2px 2px 5px #0000003d, -2px -2px 5px #ffffff;
+				}
+			}
+
+			.post-type-detail {
+				margin-top: 2rem;
+				color: $fontColor;
+			}
+
+			.monthly-salary-detail {
+				display: block;
+				color: $subfontColor;
+				margin-top: 0.5rem;
+			}
+
+			.description-label-detail {
+				margin-top: 2rem;
+				color: $fontColor;
+			}
+
+			.description-detail {
+				width: 100%;
+				margin-top: 1rem;
+				color: $fontColor;
+			}
+
+			.button-wrapper {
+				margin-top: auto;
+				.login-alert {
+					display: block;
+					width: 100%;
+					text-align: center;
+					color: $pColorPink;
+					margin-bottom: 1rem;
+				}
+				.button {
+					width: 100%;
+					padding: 0.8rem;
+					border: none;
+					border-radius: 10px;
+					background-color: $fontColor;
+					color: white;
+					font-weight: bold;
+					margin-bottom: 2rem;
+					box-shadow: 4px 4px 10px #00000056, -4px -4px 10px #ffffff;
+	
+					&:hover {
+						cursor: pointer;
+					}
+				}
+	
+				.apply {
+					background-color: $pColorPink;
+					margin-bottom: 1rem;
+				}
+			}
+		}
+
+		.detail-loading-overlay {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			height: 100vh;
+			width: 433px;
+			opacity: 1;
+			transition: all ease-in-out 0.5s;
+
+			@media only screen and (max-width: 769px) {
+				width: 100%;
+			}
+
+			position: fixed;
+			right: -433px;
+			top: 0;
+			z-index: 1;
+			box-shadow: -8px 0px 6px 0px #ffffff63;
+			padding: 5rem 1.5rem 0 1.5rem;
+			background-color: $backgroundColor;
+		}
+
+		.loading {
+			right: 0;
+		}
+
+		.done-load {
+			opacity: 0;
+			display: none;
+		}
+
+		.display {
+			opacity: 1;
+			right: 0;
+		}
+
+		.loading-overlay {
+			flex: 1;
+			height: calc(100vh - 24px - 6rem);
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
+
+		.loading-icon {
+			width: 50px;
+			height: 50px;
+			background-color: $backgroundColor;
+			border-radius: 1000px;
+			position: relative;
+
+			&:before,
+			&:after {
+				content: "";
+				position: absolute;
+				display: block;
+				width: 50px;
+				height: 50px;
+				border-radius: 1000px;
+				z-index: -1;
+			}
+
+			&:before {
+				background-color: $pColorCyan;
+				animation: selection-cw-animate infinite 1s;
+			}
+
+			&:after {
+				background-color: $pColorPink;
+				animation: selection-ccw-animate infinite 1.5s;
+			}
+		}
+
+		@keyframes selection-cw-animate {
+			0% {
+				top: -5%;
+				left: 0;
+			}
+
+			25% {
+				top: 0;
+				left: 5%;
+			}
+
+			50% {
+				top: 5%;
+				left: 0;
+			}
+
+			75% {
+				top: 0;
+				left: -5%;
+			}
+
+			100% {
+				top: -5%;
+				left: 0;
+			}
+		}
+
+		@keyframes selection-ccw-animate {
+			0% {
+				top: -5%;
+				left: 0;
+			}
+
+			25% {
+				top: 0;
+				left: -5%;
+			}
+
+			50% {
+				top: 5%;
+				left: 0;
+			}
+
+			75% {
+				top: 0;
+				left: 5%;
+			}
+
+			100% {
+				top: -5%;
+				left: 0;
+			}
+		}
+	}
 }
